--- a/frontend/src/css/dropdown/main.pcss
+++ b/frontend/src/css/dropdown/main.pcss
@@ -6,12 +6,12 @@
     opacity: 0;
     transition: all 300ms ease;
     position: absolute;
-    top: 100%;
+    top: calc(100% + 20px);
     left: 0;
     width: 100%;
     min-width: 200px;
     padding: 12px 8px;
-    border-radius: 0 0 5px 5px;
+    border-radius: 5px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -19,6 +19,21 @@
     z-index: 1001;
     box-shadow: 2px 2px 10px 0 rgba(0, 0, 0, 0.4);
     transform: translateY(10px);
+    background: var(--dropdown-panel-bg-color);
+    color: var(--dropdown-color);
+
+    &::before {
+      content: "";
+      position: absolute;
+      top: -10px;
+      right: 0;
+      width: 0;
+      height: 0;
+      border-left: 10px solid transparent;
+      border-right: 10px solid transparent;
+      border-bottom: 10px solid var(--dropdown-panel-caret-bg-color);
+      z-index: 1002;
+    }
   }
 
   &.dropdown--right {
