--- a/frontend/src/css/user-menu/main.pcss
+++ b/frontend/src/css/user-menu/main.pcss
@@ -1,8 +1,5 @@
 #user-menu {
   padding: 8px 16px;
-  border-bottom: 1px solid var(--color-darker);
-  background: var(--color-darker-max);
-  color: var(--color-text-dark-mode);
   position: fixed;
   top: 0;
   left: 0;
@@ -10,7 +7,7 @@
   height: var(--horizontal-menu-height);
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: space-between;
   z-index: 1000;
 }
 .user-info {
@@ -20,19 +17,8 @@
       background: transparent;
       border: none;
       box-shadow: none;
-      color: var(--color-primary-lighter);
       margin: 0;
       transition: all 300ms ease;
-
-      &:hover {
-        color: var(--color-text-dark-mode);
-      }
-    }
-
-    .dropdown__panel {
-      top: calc(100% + 10px);
-      background: var(--color-darker);
-      color: var(--color-text-dark-mode);
     }
   }
 }
