- Add categories support - Add site configuration support - Add post creation support - Change css theme

--- a/frontend/src/css/base/main.pcss
+++ b/frontend/src/css/base/main.pcss
@@ -38,6 +38,14 @@ h1 {
   margin: 0;
 }
 
+.text-left {
+  text-align: left;
+}
+
+.text-right {
+  text-align: right;
+}
+
 .text-center {
   text-align: center;
 }
