--- a/frontend/src/css/buttons/main.pcss
+++ b/frontend/src/css/buttons/main.pcss
@@ -37,6 +37,7 @@
 .btn:hover {
   background: var(--btn-bg-color-hover);
   color: var(--btn-color-hover);
+  box-shadow: 0px 0px 5px 0 rgba(0, 0, 0, 0.2);
 }
 
 .btn--add-image {
@@ -46,4 +47,10 @@
 .btn--submit {
   width: 100%;
   padding: 12px;
+}
+
+.btn--inline {
+  display: inline-block;
+  width: auto !important;
+  min-width: 120px;
 }
