--- a/frontend/src/css/main-navigation/main.pcss
+++ b/frontend/src/css/main-navigation/main.pcss
@@ -99,7 +99,8 @@
   background: var(--menu-link-bg-color-active);
   color: var(--menu-link-color-active);
   .link-icon {
-    border-color: var(--menu-link-color-active);
+    color: var(--menu-link-icon-color-active);
+    border-color: var(--menu-link-icon-color-active);
   }
 
   &:hover {
