--- a/frontend/src/css/forms/base.pcss
+++ b/frontend/src/css/forms/base.pcss
@@ -4,22 +4,26 @@ form {
   margin: 30px 0;
 
   .form__columns {
-    display: flex;
-    justify-content: space-between;
+    @media (min-width: 1024px) {
+      display: flex;
+      justify-content: space-between;
+    }
   }
 
   .form__column {
-    &--left {
-      width: 70%;
-    }
+    @media (min-width: 1024px) {
+      &--left {
+        width: 60%;
+      }
 
-    &--right {
-      width: 30%;
-      padding: 0 32px;
-    }
+      &--right {
+        width: 40%;
+        padding: 0 32px;
+      }
 
-    &--full {
-      width: 100%;
+      &--full {
+        width: 100%;
+      }
     }
   }
 }
@@ -52,6 +56,7 @@ textarea {
 
   &:focus {
     border: 1px solid var(--color-dark);
+    background: var(--form-input-bg-color-active);
   }
 }
 
@@ -160,4 +165,50 @@ input[type="file"] {
   font-size: 0.8rem;
   font-style: italic;
   color: rgba(255, 255, 255, 0.7);
+}
+
+.output-image {
+  margin: 16px auto;
+  img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    border: 10px solid #eee;
+    border-radius: 5px;
+  }
+}
+
+select {
+  width: 100%;
+  border: 1px solid var(--form-input-border-color);
+  box-shadow: none;
+
+  option {
+    min-height: 1.8rem;
+    font-size: 1rem;
+    padding: 0.6rem;
+  }
+}
+
+.categories-input-list {
+  max-height: 200px;
+  overflow-x: hidden;
+  overflow-y: auto;
+  padding: 0;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  border-radius: 5px;
+  box-shadow: 2px 2px 10px 0 rgba(0, 0, 0, 0.2);
+  background: var(--block-background);
+
+  &__item {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+    padding: 8px 16px;
+
+    input {
+      margin-right: 10px;
+    }
+  }
 }
