--- a/frontend/src/css/images-list/main.pcss
+++ b/frontend/src/css/images-list/main.pcss
@@ -9,7 +9,7 @@
 .images-list__item {
   margin: 10px;
   padding: 0 0 10px 0;
-  background: #181818;
+  background: var(--block-background);
   transition: all 300ms ease;
   text-align: center;
   width: calc(100% / 2 - 20px);
@@ -58,7 +58,7 @@
     justify-content: center;
     align-items: center;
     min-height: 176px;
-    background: #eee;
+    background: var(--block-background);
 
     .btn {
       flex: 0;
