--- a/views/layout.pug
+++ b/views/layout.pug
@@ -45,6 +45,8 @@ html
             li.main-navigation__list__item
               a(href="/admin/categories") <i class="las la-tags link-icon"></i> <span class="main-navigation__list__item__text">Liste des catégories</span>
             li.main-navigation__list__item
+                a(href="/admin/posts") <i class="las la-list link-icon"></i> <span class="main-navigation__list__item__text">Liste des articles</span>
+            li.main-navigation__list__item
               a(href="/admin/images/add") <i class="las la-plus link-icon"></i> <span class="main-navigation__list__item__text">Ajouter des images</span>
             li.main-navigation__list__item
               a(href="/admin/articles/add") <i class="las la-plus link-icon"></i> <span class="main-navigation__list__item__text">Ajouter un article</span>
