--- a/frontend/src/css/buttons/main.pcss
+++ b/frontend/src/css/buttons/main.pcss
@@ -32,10 +32,30 @@
   .link-icon {
     margin-right: 0;
   }
+
+  &--danger {
+    background: var(--color-danger);
+    color: var(--color-danger-text);
+  }
+
+  &--warning {
+    background: var(--color-warning);
+    color: var(--color-warning-text);
+  }
+
+  &--info {
+    background: var(--color-info);
+    color: var(--color-info-text);
+  }
+
+  &--success {
+    background: var(--color-success);
+    color: var(--color-success-text);
+  }
 }
 
 .btn:hover {
-  background: var(--btn-bg-color-hover);
+  background-size: 150%;
   color: var(--btn-color-hover);
   box-shadow: 0px 0px 5px 0 rgba(0, 0, 0, 0.2);
 }
